@@ -1,3 +1,8 @@
+2008-03-05  David Athay  <ko2fan@gmail.com>
+
+	* src/game.cpp, src/gui/guildwindow.cpp: Fixed key presses during
+	text dialog in guild window and changed license to standard GPL.
+
 2008-03-04  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/CMakeLists.txt, data/graphics/gui/CMakeLists.txt,
